Removed the height from the body ele by commentting out the height i fixed the issue where the card would overflow also adding min-height:100vh; also fixes the card overflowing
Added color + font-weight to the author name

Added color to the date

Added a light grayish blue color background to share-icon-container
Made share-icon-container a circle via border-radius 50% + added padding

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 /*----------------------GENERAL STYLES------------------------ */
 
 body{
-  height: 100vh;
+ /*  height: 100vh; */ /*either removing the height or settig min-height:100vh; fixes the problem where the card was overflowing */
   font-family: "Manrope", sans-serif;
  
   
@@ -88,7 +88,10 @@ main.container{
 .text-section_title{
   margin-block-start:0.55rem; /*the h1 title has a bit more margin top */
  
-  font-size: 1.27rem;
+  font-size: 1.27rem; /*add calc to make font-size more responsive, although i wont be able to control the exact size
+  i should be able to control the range via clamp func: sth like this should work  clamp(1rem, 0.75rem + 1.5vw, 2rem);
+  ill adjust the value
+  */
   font-weight: 700;
   color: var(--very-dark-grayish-blue);
 }
@@ -98,7 +101,10 @@ main.container{
 
 
 
-  font-size: 0.81rem;
+  font-size: 0.81rem;/*add calc to make font-size more responsive, although i wont be able to control the exact size
+  i should be able to control the range via clamp func: sth like this should work  clamp(1rem, 0.75rem + 1.5vw, 2rem);
+  ill adjust the value
+  */
   line-height: 1.5;
   color: var(--desaturated-dark-blue);
 }
@@ -111,6 +117,10 @@ main.container{
 }
 
 .paragraph-wrapper p{
+  /*add calc to make font-size more responsive, although i wont be able to control the exact size
+  i should be able to control the range via clamp func: sth like this should work  clamp(1rem, 0.75rem + 1.5vw, 2rem);
+  ill adjust the value
+  */
   font-size: 0.81rem;
   
 }
@@ -119,7 +129,19 @@ main.container{
   border-radius: 50%;
 }
 
+.author{
+  font-weight: 700;
+color: var(--very-dark-grayish-blue);
+}
+.date{
+  color: var(--desaturated-dark-blue);
+}
+
 .share-icon-container{
+  background-color: var(--light-grayish-blue);
+  padding:0.75em;
+  border-radius: 50%;
+
   margin-left:auto; /*push the share icon all the way to the right */
 }
 
